# svg

./: .gitignore  Cargo.toml  README.md
node/: app.js  server.js
nodealgo/: app.js  server.js
nodealgo/public/: index.html
nodejs/: server.js  test.js
nodejs/public/: index.html
nodeweb/: app.js  package-lock.json  package.json
nodeweb/routes/: index.js
nodeweb/views/: index.hbs
nodeweb/views/layouts/: layout.hbs
rusty_machine/: Cargo.toml
rusty_machine/rulinalg/src/matrix/: mod.rs
rusty_machine/src/: lib.rs
rusty_machine/src/learning/nnet/: mod.rs  net_layer.rs
src/: lib.rs
