[package]
name = "svg"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "svg_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "=0.2.61"
nodejs-helper = "0.0.3"
# tokio = {version = "0.2", features = ["full"]}
# lorikeet = "0.11.3"
# pretty_env_logger = "0.4.0"
# log = "0.4.8"
# structopt = "0.3.14"
# anyhow = "1.0.30"
# chrono = { version = "0.4.11", features = ["serde"] }
tera = "1.2.0"
# sled = "0.31.0"
# lazy_static = "1.4.0"
serde_json = "=1.0.44"
# includedir= "0.5.0"
# phf = "0.7.24"
# actix-web = "2"
# actix-rt = "1"
# conduit-mime-types = "0.7.3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

