[package]
name = "svg"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "svg_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# ndarray = { version = "0.13.0", features = ["serde"] }
wasm-bindgen = "=0.2.61"
nodejs-helper = "0.0.3"
tera = "1.2.0"
serde_json = "=1.0.44"
csv = "1.1.3"
rusty-machine = {path = "rusty_machine"}


# rusty-machine = "0.5.4"
# rusty-machine = {path = "rusty_machine"}
# console_error_panic_hook = "0.1.6"
# num = { version = "0.1.41", default-features = false }
# rand = "0.4.1"
# rulinalg = { git = "https://github.com/AtheMathmo/rulinalg", rev = "1ed8b937" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



